Fix padding, spacing issues on side nav. Add 1989 to logo.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -25,7 +25,7 @@ nav {
   nav figure {
     margin-bottom: 1.0em; }
   nav hr {
-    margin: 1.5em 3.0em; }
+    margin: 1.2em 3.0em; }
   nav ul {
     margin: 0;
     padding: 0;
@@ -34,7 +34,7 @@ nav {
     nav ul.contact {
       font-size: 14px; }
     nav ul li {
-      padding: 4px 0; }
+      padding: 3px 0; }
       nav ul li a {
         padding: 6px 0;
         color: inherit;
@@ -102,9 +102,10 @@ hr {
       margin: 10px auto;
       width: 100%; }
       nav ul li {
-        display: inline-block; }
+        display: inline-block;
+        padding: 0 10px; }
         nav ul li a {
-          padding: 0 10px; }
+          padding: 2px 0; }
 
   div.wrapper,
   footer {
