--- a/stylesheets/application.css.scss
+++ b/stylesheets/application.css.scss
@@ -33,7 +33,7 @@ nav {
   }
   
   hr {
-    margin: 1.5em 3.0em;
+    margin: 1.2em 3.0em;
   }
   
   ul {
@@ -47,7 +47,7 @@ nav {
     }
     
     li {
-      padding: 4px 0;
+      padding: 3px 0;
       
       a {
         padding: 6px 0;
@@ -138,9 +138,10 @@ hr {
       
       li {
         display: inline-block;
+        padding: 0 10px;
         
         a {
-          padding: 0 10px;
+          padding: 2px 0;
         }
       }
     }
